# ofdm-transfer

./: .gitignore  Makefile.am  README  configure.ac  guix.scm  manifest.scm  ofdm-transfer.c  test.sh
examples/: Makefile.am  duplex-ppp.sh  duplex.c  echo-server.c  full-duplex-ppp.sh  full-duplex.c  half-duplex.sh
po/: Makevars  POTFILES.in  fr.po  ofdm-transfer.pot
src/: Makefile.am  main.c  ofdm-transfer.c  ofdm-transfer.h
tests/: Makefile.am  test-library-callback.c  test-library-file.c  test-library.c  test-program.sh
